@@ -1,13 +1,23 @@
 Package: ghyp
 Type: Package
-Version: 1.5.2
-Date: 2009-10-11
+Version: 1.5.3
+Date: 2010-03-29
 Title: A package on the generalized hyperbolic distribution and its special cases
-Author: Wolfgang Breymann, David Luethi
+Author: David Luethi, Wolfgang Breymann
 Maintainer: David Luethi <luethid@gmail.com>
 LazyLoad: yes
 LazyData: no
 Depends:  R(>= 2.7), methods, numDeriv, graphics, stats, gplots
-Description: This package provides detailed functionality for working with the univariate and multivariate Generalized Hyperbolic distribution and its special cases (Hyperbolic (hyp), Normal Inverse Gaussian (NIG), Variance Gamma (VG), skewed Student-t and Gaussian distribution). Especially, it contains fitting procedures, an AIC-based model selection routine, and functions for the computation of density, quantile, probability, random variates, expected shortfall and some portfolio optimization and plotting routines as well as the likelihood ratio test. In addition, it contains the Generalized Inverse Gaussian distribution.
+Description: This package provides detailed functionality for working
+	  with the univariate and multivariate Generalized Hyperbolic
+	  distribution and its special cases (Hyperbolic (hyp), Normal
+	  Inverse Gaussian (NIG), Variance Gamma (VG), skewed
+	  Student-t and Gaussian distribution). Especially, it
+	  contains fitting procedures, an AIC-based model selection
+	  routine, and functions for the computation of density,
+	  quantile, probability, random variates, expected shortfall
+	  and some portfolio optimization and plotting routines as
+	  well as the likelihood ratio test. In addition, it contains
+	  the Generalized Inverse Gaussian distribution.
 License: GPL (>= 2)
 Encoding: latin1
