@@ -4,3 +4,4 @@
 => Student-t: wenn dof >= z.B. 1e5 mit gauss arbeiten
 => vignette: stable property of NIG.
 => Use \texorpdfstring{TEX text}{Bookmark Text} in vignette for parametrizatino subsections.
+=> Handel NA's in multivariate fits
